Fixed minor PEP8 violation

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -34,7 +34,7 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreAnalyzer = SymbTrAnalyzer(verbose=False)"
+    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)"
    ]
   },
   {
@@ -50,7 +50,20 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 8.62 seconds to execute.\n",
+      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 0.64 seconds to execute.\n",
+      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
+      "  The call took 0.01 seconds to execute.\n"
+     ]
+    }
+   ],
    "source": [
     "score_data = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)\n"
    ]
@@ -70,7 +83,20 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 8.57 seconds to execute.\n",
+      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 0.60 seconds to execute.\n",
+      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
+      "  The call took 0.01 seconds to execute.\n"
+     ]
+    }
+   ],
    "source": [
     "# Automatic phrase segmentation on the SymbTr-txt score using pre-trained model\n",
     "phrase_bounds = scoreAnalyzer.segment_phrase(txt_filepath, symbtr_name=symbtr_name)\n",
