AudioAnalyzer and JointAnalyzer improvements - stable_notes in AudioAnalyzer outputs is renamed as note_models - Removed AudioAnalyzer.update_analysis - Improved AudioAnalyzer.analyze to handle the functionality of the removed update_analysis - note_models in JointAnalyzer outputs is moved to "score informed features" - summarize is rewritten to handle note models propoerly

--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -66,13 +66,13 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.59 seconds to execute.\n",
+      "  The call took 9.54 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.60 seconds to execute.\n",
+      "  The call took 0.65 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 34.05 seconds to execute.\n"
+      "  The call took 34.44 seconds to execute.\n"
      ]
     }
    ],
@@ -105,15 +105,17 @@
      "output_type": "stream",
      "text": [
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 13.56 seconds to execute.\n",
+      "  The call took 13.11 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "  The call took 18.07 seconds to execute.\n",
+      "  The call took 18.38 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 19.95 seconds to execute.\n",
+      "  The call took 20.06 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 19.11 seconds to execute.\n",
+      "  The call took 19.58 seconds to execute.\n",
+      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "  The call took 4.95 seconds to execute.\n",
       "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.78 seconds to execute.\n",
+      "  The call took 1.77 seconds to execute.\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
@@ -127,7 +129,8 @@
     "    txt_score_filepath, score_data, audio_filepath, audio_pitch)\n",
     "\n",
     "# redo some steps in audio analysis\n",
-    "score_informed_audio_features = audioAnalyzer.update_analysis(score_informed_audio_features)\n"
+    "score_informed_audio_features = audioAnalyzer.analyze(\n",
+    "    metadata=False, **score_informed_audio_features)\n"
    ]
   },
   {
@@ -150,23 +153,23 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.92 seconds to execute.\n",
+      "  The call took 9.06 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.58 seconds to execute.\n",
+      "  The call took 0.60 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 36.21 seconds to execute.\n",
+      "  The call took 35.96 seconds to execute.\n",
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 12.64 seconds to execute.\n",
+      "  The call took 13.07 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "  The call took 17.54 seconds to execute.\n",
+      "  The call took 18.43 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 19.01 seconds to execute.\n",
+      "  The call took 19.65 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 19.11 seconds to execute.\n",
+      "  The call took 19.44 seconds to execute.\n",
       "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.80 seconds to execute.\n",
+      "  The call took 1.76 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n"
      ]
