--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -66,13 +66,13 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.54 seconds to execute.\n",
+      "  The call took 8.01 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.65 seconds to execute.\n",
+      "  The call took 0.79 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 34.44 seconds to execute.\n"
+      "  The call took 37.02 seconds to execute.\n"
      ]
     }
    ],
@@ -105,17 +105,15 @@
      "output_type": "stream",
      "text": [
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 13.11 seconds to execute.\n",
+      "  The call took 13.32 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
       "  The call took 18.38 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 20.06 seconds to execute.\n",
+      "  The call took 22.28 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 19.58 seconds to execute.\n",
-      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 4.95 seconds to execute.\n",
-      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.77 seconds to execute.\n",
+      "  The call took 18.57 seconds to execute.\n",
+      "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "  The call took 1.69 seconds to execute.\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
@@ -130,7 +128,7 @@
     "\n",
     "# redo some steps in audio analysis\n",
     "score_informed_audio_features = audioAnalyzer.analyze(\n",
-    "    metadata=False, **score_informed_audio_features)\n"
+    "    metadata=False, pitch=False, **score_informed_audio_features)\n"
    ]
   },
   {
@@ -153,23 +151,23 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.06 seconds to execute.\n",
+      "  The call took 8.60 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.60 seconds to execute.\n",
+      "  The call took 7.59 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 35.96 seconds to execute.\n",
+      "  The call took 34.54 seconds to execute.\n",
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 13.07 seconds to execute.\n",
+      "  The call took 13.33 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "  The call took 18.43 seconds to execute.\n",
+      "  The call took 17.92 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 19.65 seconds to execute.\n",
+      "  The call took 19.67 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 19.44 seconds to execute.\n",
-      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.76 seconds to execute.\n",
+      "  The call took 18.56 seconds to execute.\n",
+      "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "  The call took 1.73 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n"
      ]
@@ -196,7 +194,7 @@
     "pitch_filtered, notes_filtered = jointAnalyzer.filter_pitch(audio_pitch, notes)\n",
     "\n",
     "# aligned note model\n",
-    "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.get_note_models(\n",
+    "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.compute_note_models(\n",
     "    pitch_filtered, notes_filtered, tonic['symbol'])\n",
     "\n",
     "# recompute the audio features using the filtered pitch and tonic\n",
@@ -204,7 +202,7 @@
     "pitch_class_distribution = pitch_distribution.to_pcd()\n",
     "\n",
     "# get the melodic progression model\n",
-    "melodic_progression = audioAnalyzer.get_melodic_progression(pitch_filtered)\n",
+    "melodic_progression = audioAnalyzer.compute_melodic_progression(pitch_filtered)\n",
     "\n",
     "# transposition (ahenk) identification\n",
     "transposition = audioAnalyzer.identify_transposition(aligned_tonic, aligned_tonic['symbol'])\n"
