Added input parsing and partial processing to SymbTrAnalyzer.analyze

--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -32,14 +32,14 @@
    },
    "outputs": [],
    "source": [
-    "# score filepaths\n",
+    "# score inputs\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
-    "txt_score_filepath = os.path.join(symbtr_name, symbtr_name + '.txt')\n",
-    "mu2_score_filepath = os.path.join(symbtr_name, symbtr_name + '.mu2')\n",
+    "txt_score_filename = os.path.join(symbtr_name, symbtr_name + '.txt')\n",
+    "mu2_score_filename = os.path.join(symbtr_name, symbtr_name + '.mu2')\n",
     "\n",
     "# instantiate\n",
     "audio_mbid = 'f970f1e0-0be9-4914-8302-709a0eac088e'\n",
-    "audio_filepath = os.path.join(symbtr_name, audio_mbid, audio_mbid + '.mp3')\n",
+    "audio_filename = os.path.join(symbtr_name, audio_mbid, audio_mbid + '.mp3')\n",
     "\n",
     "# instantiate analyzer objects\n",
     "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n",
@@ -66,22 +66,23 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.01 seconds to execute.\n",
+      "  The call took 9.42 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.79 seconds to execute.\n",
+      "  The call took 0.71 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 37.02 seconds to execute.\n"
+      "  The call took 36.11 seconds to execute.\n"
      ]
     }
    ],
    "source": [
     "# score (meta)data analysis\n",
-    "score_data = scoreAnalyzer.analyze(txt_score_filepath, mu2_score_filepath)\n",
+    "score_data, boundaries, work_mbid = scoreAnalyzer.analyze(\n",
+    "    txt_score_filename, mu2_score_filename)\n",
     "\n",
     "# predominant melody extraction\n",
-    "audio_pitch = audioAnalyzer.extract_pitch(audio_filepath)\n",
+    "audio_pitch = audioAnalyzer.extract_pitch(audio_filename)\n",
     "\n",
     "# NOTE: do not call pitch filter later as aligned_pitch_filter will be more effective"
    ]
@@ -105,17 +106,17 @@
      "output_type": "stream",
      "text": [
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 13.32 seconds to execute.\n",
+      "  The call took 13.34 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "  The call took 18.38 seconds to execute.\n",
+      "  The call took 19.52 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 22.28 seconds to execute.\n",
+      "  The call took 21.05 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 18.57 seconds to execute.\n",
+      "  The call took 19.44 seconds to execute.\n",
       "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.69 seconds to execute.\n",
+      "  The call took 1.78 seconds to execute.\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 0.01 seconds to execute.\n",
+      "  The call took 0.02 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n"
      ]
@@ -124,7 +125,7 @@
    "source": [
     "# joint analysis\n",
     "joint_features, score_informed_audio_features = jointAnalyzer.analyze(\n",
-    "    txt_score_filepath, score_data, audio_filepath, audio_pitch)\n",
+    "    txt_score_filename, score_data, audio_filename, audio_pitch)\n",
     "\n",
     "# redo some steps in audio analysis\n",
     "score_informed_audio_features = audioAnalyzer.analyze(\n",
@@ -151,23 +152,23 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.60 seconds to execute.\n",
+      "  The call took 9.31 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 7.59 seconds to execute.\n",
+      "  The call took 0.63 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 34.54 seconds to execute.\n",
+      "  The call took 37.52 seconds to execute.\n",
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 13.33 seconds to execute.\n",
+      "  The call took 13.21 seconds to execute.\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "  The call took 17.92 seconds to execute.\n",
+      "  The call took 20.18 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "  The call took 19.67 seconds to execute.\n",
+      "  The call took 21.58 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 18.56 seconds to execute.\n",
+      "  The call took 20.74 seconds to execute.\n",
       "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.73 seconds to execute.\n",
+      "  The call took 1.87 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n"
      ]
@@ -176,19 +177,19 @@
    "source": [
     "# score (meta)data analysis\n",
     "score_features = scoreAnalyzer.analyze(\n",
-    "    txt_score_filepath, mu2_score_filepath, symbtr_name=symbtr_name)\n",
+    "    txt_score_filename, mu2_score_filename, symbtr_name=symbtr_name)\n",
     "\n",
     "# predominant melody extraction\n",
-    "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n",
+    "pitch = audioAnalyzer.extract_pitch(audio_filename)\n",
     "\n",
     "# joint analysis\n",
     "# score-informed tonic and tempo estimation\n",
     "tonic, tempo = jointAnalyzer.extract_tonic_tempo(\n",
-    "    txt_score_filepath, score_data, audio_filepath, audio_pitch)\n",
+    "    txt_score_filename, score_data, audio_filename, audio_pitch)\n",
     "\n",
     "# section linking and note-level alignment\n",
     "aligned_sections, notes, section_links, section_candidates = jointAnalyzer.align_audio_score(\n",
-    "    txt_score_filepath, score_data, audio_filepath, audio_pitch, tonic, tempo)\n",
+    "    txt_score_filename, score_data, audio_filename, audio_pitch, tonic, tempo)\n",
     "\n",
     "# aligned pitch filter\n",
     "pitch_filtered, notes_filtered = jointAnalyzer.filter_pitch(audio_pitch, notes)\n",
