Minor improvements in the ipynb demos

--- a/complete_analysis_demo.ipynb
+++ b/complete_analysis_demo.ipynb
@@ -99,12 +99,12 @@
    "source": [
     "# Apply the complete analysis. The output tuple will have (summarized_features, \n",
     "# score_features, audio_features, score_informed_audio_features, joint_features) in order\n",
-    "results = completeAnalyzer.analyze(\n",
+    "complete_features = completeAnalyzer.analyze(\n",
     "    symbtr_txt_filename=txt_score_filename, symbtr_mu2_filename=mu2_score_filename,\n",
     "    symbtr_name=symbtr_name, audio_filename=audio_filename, audio_metadata=audio_mbid)\n",
     "\n",
     "# plot the summarized features\n",
-    "fig, ax = completeAnalyzer.plot(results[0])\n",
+    "fig, ax = completeAnalyzer.plot(complete_features[0])\n",
     "ax[0].set_ylim([50, 500])\n",
     "pylab.show()\n"
    ]
