[BROKEN] Started lilypond to svg conversion

--- a/score_converter_demo.ipynb
+++ b/score_converter_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -61,20 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/sertansenturk_mtg/Documents/notaIcra/code/tomato/tomato/symbolic/ScoreConverter.py(64)lilypond_to_svg()\n",
+      "-> subprocess.call(callstr)\n",
+      "(Pdb) callstr\n",
+      "u'/Applications/LilyPond.app/Contents/Resources/bin/lilypond -dpaper-size=\\\\\"junior-legal\\\\\" -dbackend=svg \"-o /var/folders/41/9l6z7g550ss_0rhwlr1x6cph0000gn/T/tmp5SPjtK\" \"/var/folders/41/9l6z7g550ss_0rhwlr1x6cph0000gn/T/tmpISOFV2.ly\"'\n"
+     ]
+    }
+   ],
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
     "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, out=None,\n",
     "                                             symbtr_name=symbtr_name, mbid=mbid)\n",
     "\n",
-    "# convert the MusicXML file to LilyPond file\n",
+    "# convert the MusicXML to LilyPond\n",
     "ly_str, xml2ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, lilypond_out=None, render_metadata=False)\n"
+    "    xml_str, lilypond_out=None, render_metadata=True)\n",
+    "\n",
+    "# convert the LilyPond to svg\n",
+    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out='tmp.svg')\n"
    ]
   }
  ],
@@ -94,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
