--- a/score_converter_demo.ipynb
+++ b/score_converter_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -61,22 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> /Users/sertansenturk_mtg/Documents/notaIcra/code/tomato/tomato/symbolic/ScoreConverter.py(64)lilypond_to_svg()\n",
-      "-> subprocess.call(callstr)\n",
-      "(Pdb) callstr\n",
-      "u'/Applications/LilyPond.app/Contents/Resources/bin/lilypond -dpaper-size=\\\\\"junior-legal\\\\\" -dbackend=svg \"-o /var/folders/41/9l6z7g550ss_0rhwlr1x6cph0000gn/T/tmp5SPjtK\" \"/var/folders/41/9l6z7g550ss_0rhwlr1x6cph0000gn/T/tmpISOFV2.ly\"'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
@@ -88,7 +77,29 @@
     "    xml_str, lilypond_out=None, render_metadata=True)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out='tmp.svg')\n"
+    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(svg)"
    ]
   }
  ],
@@ -108,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
