--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "xml_output, ly_output, svg_output, note_mappings = scoreConverter.convert(\n",
+    "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
     "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=mbid, \n",
     "    render_metadata=True, xml_out=None, ly_out=None, svg_out=None)\n"
    ]
@@ -73,15 +73,15 @@
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
-    "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, xml_out=None,\n",
+    "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, xml_out='no_meta.xml',\n",
     "                                             symbtr_name=symbtr_name, mbid=mbid)\n",
     "\n",
     "# convert the MusicXML to LilyPond\n",
-    "ly_str, txt_to_ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out=None, render_metadata=True)\n",
+    "ly_str, txt_ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
+    "    xml_str, ly_out='no_meta.ly', render_metadata=False)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None)\n"
+    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out='no_meta')\n"
    ]
   }
  ],
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
