Fixed minor PEP8 issue

--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -73,15 +73,15 @@
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
-    "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, xml_out='no_meta.xml',\n",
+    "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, xml_out=None,\n",
     "                                             symbtr_name=symbtr_name, mbid=mbid)\n",
     "\n",
     "# convert the MusicXML to LilyPond\n",
     "ly_str, txt_ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out='no_meta.ly', render_metadata=False)\n",
+    "    xml_str, ly_out=None, render_metadata=False)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out='no_meta')\n"
+    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None)\n"
    ]
   }
  ],
