--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -53,7 +53,8 @@
    "source": [
     "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
     "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=mbid, \n",
-    "    render_metadata=True, xml_out=None, ly_out=None, svg_out=None)\n"
+    "    render_metadata=True, xml_out=None, ly_out=None, svg_out=None,\n",
+    "    svg_paper_size='junior-legal')\n"
    ]
   },
   {
@@ -78,10 +79,10 @@
     "\n",
     "# convert the MusicXML to LilyPond\n",
     "ly_str, txt_ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out=None, render_metadata=False)\n",
+    "    xml_str, ly_out=None, render_metadata=True)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None)\n"
+    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None, paper_size='junior-legal')\n"
    ]
   }
  ],
