Simplified svg label replacements and modularized getting svg pages

--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -22,14 +22,18 @@
    "outputs": [],
    "source": [
     "# score filepaths\n",
-    "txt_filename = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
-    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt')\n",
-    "mu2_filename = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
-    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2')\n",
-    "\n",
-    "# only needed if the filename is modified from the SymbTr naming convention\n",
+    "score_folder = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
-    "mbid = 'e7924b0d-c8a0-4b4a-b253-8eec898eac1e'\n",
+    "work_mbid = 'e7924b0d-c8a0-4b4a-b253-8eec898eac1e'\n",
+    "\n",
+    "# input files\n",
+    "txt_filename = os.path.join(score_folder, symbtr_name + '.txt')\n",
+    "mu2_filename = os.path.join(score_folder, symbtr_name + '.mu2')\n",
+    "\n",
+    "# outputs \n",
+    "xml_filename = os.path.join(score_folder, symbtr_name + '.xml')\n",
+    "ly_filename = os.path.join(score_folder, symbtr_name + '.ly')\n",
+    "svg_filename_template = os.path.join(score_folder, symbtr_name)\n",
     "\n",
     "# instantiate analyzer object\n",
     "scoreConverter = ScoreConverter()\n"
@@ -52,9 +56,9 @@
    "outputs": [],
    "source": [
     "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
-    "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=mbid, \n",
-    "    render_metadata=True, xml_out=None, ly_out=None, svg_out=None,\n",
-    "    svg_paper_size='junior-legal')\n"
+    "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=work_mbid, \n",
+    "    render_metadata=True, xml_out=xml_filename, ly_out=ly_filename, \n",
+    "    svg_out=svg_filename_template, svg_paper_size='junior-legal')\n"
    ]
   },
   {
@@ -74,15 +78,18 @@
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
-    "xml_str = scoreConverter.txt_mu2_to_musicxml(txt_filename, mu2_filename, xml_out=None,\n",
-    "                                             symbtr_name=symbtr_name, mbid=mbid)\n",
+    "xml_str = scoreConverter.txt_mu2_to_musicxml(\n",
+    "    txt_filename, mu2_filename, xml_out=xml_filename, symbtr_name=symbtr_name,\n",
+    "    mbid=work_mbid)\n",
     "\n",
     "# convert the MusicXML to LilyPond\n",
-    "ly_str, txt_ly_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out=None, render_metadata=True)\n",
+    "ly_str, ly_txt_mapping = scoreConverter.musicxml_to_lilypond(\n",
+    "    xml_str, ly_out=ly_filename, render_metadata=True)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(ly_str, svg_out=None, paper_size='junior-legal')\n"
+    "svg = scoreConverter.lilypond_to_svg(\n",
+    "    ly_str, svg_out=svg_filename_template, \n",
+    "    paper_size='junior-legal', ly_txt_mapping=ly_txt_mapping)\n"
    ]
   }
  ],
