Made the module names Pythonic

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from tomato.symbolic.SymbTrAnalyzer import SymbTrAnalyzer\n",
+    "from tomato.symbolic.symbtranalyzer import SymbTrAnalyzer\n",
     "from symbtrextras.ScoreExtras import ScoreExtras\n",
     "import os\n",
     "from pprint import pprint"
@@ -54,11 +54,11 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 11.17 seconds to execute.\n",
+      "  The call took 9.75 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.80 seconds to execute.\n",
+      "  The call took 0.61 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.02 seconds to execute.\n"
+      "  The call took 0.01 seconds to execute.\n"
      ]
     }
    ],
@@ -694,6 +694,7 @@
       " 'symbtr': 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
       " 'tempo': {'unit': 'bpm', 'value': 112},\n",
       " 'tonic': u'A4',\n",
+      " 'url': u'http://musicbrainz.org/work/e7924b0d-c8a0-4b4a-b253-8eec898eac1e',\n",
       " 'usul': {'attribute_key': u'aksaksemai',\n",
       "          'mb_attribute': 'Aksaksemai',\n",
       "          'mertebe': 8,\n",
@@ -737,11 +738,11 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 11.01 seconds to execute.\n",
+      "  The call took 9.53 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.71 seconds to execute.\n",
+      "  The call took 0.78 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.02 seconds to execute.\n"
+      "  The call took 0.01 seconds to execute.\n"
      ]
     }
    ],
