--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from tomato.symbolic.ScoreConverter import ScoreConverter\n",
+    "from tomato.symbolic.scoreconverter import ScoreConverter\n",
     "import pprint \n",
     "import os"
    ]
@@ -35,8 +35,12 @@
     "ly_filename = os.path.join(score_folder, symbtr_name + '.ly')\n",
     "svg_filename_template = os.path.join(score_folder, symbtr_name)\n",
     "\n",
+    "# parameters\n",
+    "render_metadata = True  # Add the metadata stored in MusicXML to Lilypond\n",
+    "svg_paper_size = 'junior-legal'  # The paper size of the svg output pages\n",
+    "\n",
     "# instantiate analyzer object\n",
-    "scoreConverter = ScoreConverter()\n"
+    "scoreConverter = ScoreConverter()"
    ]
   },
   {
@@ -57,8 +61,8 @@
    "source": [
     "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
     "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=work_mbid, \n",
-    "    render_metadata=True, xml_out=xml_filename, ly_out=ly_filename, \n",
-    "    svg_out=svg_filename_template, svg_paper_size='junior-legal')\n"
+    "    render_metadata=render_metadata, xml_out=xml_filename, ly_out=ly_filename, \n",
+    "    svg_out=svg_filename_template, svg_paper_size=svg_paper_size)"
    ]
   },
   {
@@ -84,12 +88,12 @@
     "\n",
     "# convert the MusicXML to LilyPond\n",
     "ly_str, ly_txt_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out=ly_filename, render_metadata=True)\n",
+    "    xml_str, ly_out=ly_filename, render_metadata=render_metadata)\n",
     "\n",
     "# convert the LilyPond to svg\n",
     "svg = scoreConverter.lilypond_to_svg(\n",
     "    ly_str, svg_out=svg_filename_template, \n",
-    "    paper_size='junior-legal', ly_txt_mapping=ly_txt_mapping)\n"
+    "    paper_size=svg_paper_size, ly_txt_mapping=ly_txt_mapping)"
    ]
   }
  ],
